[package]
name = "musicsteward_mvp"
version = "0.1.0"
authors = ["Robin Finkbeiner <robin@finkbeiner.dev>", "Sebastian Harner <harnersebastian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.7.0"



